Fix small blog images
Images with a height and width weren't getting adjusted by the hacky script.
Just had to move the c to the end.

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ extrahead:
                     items.forEach(el => {
                         let thumbnail = 'assets/images/playground square.png';
                         try {
-                            thumbnail = el.querySelector('thumbnail').getAttribute('url').replace('s72-c', 's640-c');
+                            thumbnail = el.querySelector('thumbnail').getAttribute('url').replace('s72-', 's640-');
                         } catch {
                         }
                         let summary = el.querySelector('summary').textContent.substr(0, 160);
