--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ extrahead:
                     items.forEach(el => {
                         let thumbnail = 'assets/images/playground square.png';
                         try {
-                            thumbnail = el.querySelector('thumbnail').getAttribute('url').replace('s72-', 's640-');
+                            thumbnail = el.querySelector('thumbnail').getAttribute('url').replace(/s72\-(.*?)c\//g, 's640-c/');
                         } catch {
                         }
                         let summary = el.querySelector('summary').textContent.substr(0, 160);
