--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: transparent-navbar
 extrahead:
 - <meta name="description" content="Oak Hill is a private Christian school in Northern
-  Virginia which offers classes for preschool through 12th grade and international
+  Virginia which offers classes for preschool through 12th grade
   students. Located outside of DC." />
 - <meta name="keywords" content="private schools in Herndon Virginia, private schools
   near me">
