--- a/visit.html
+++ b/visit.html
@@ -8,7 +8,7 @@ title: Visit
   <!-- Calendly inline widget begin -->
   <div
     class="calendly-inline-widget"
-    data-url="https://calendly.com/ohcs/visit?hide_landing_page_details=1&hide_gdpr_banner=1&text_color=303030&primary_color=771e24"
+    data-url="https://calendly.com/ohcs/visit?hide_landing_page_details=1&hide_gdpr_banner=1&text_color=303030&primary_color=CEA866"
     style="min-width: 320px; height: 670px"
   ></div>
   <script
