--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ extrahead:
     <div id="header-content" class="uk-overlay uk-position-bottom">
         <div class="uk-container">
             <div class="uk-margin-large-bottom uk-overlay uk-display-inline-block" style="background-color: rgba(255, 255, 255, .6);backdrop-filter: blur(2px);-webkit-backdrop-filter: blur(2px);">
-                <h1 class="uk-display-inline-block uk-margin-remove-bottom">Learn to Read, Learn to Think, Live for Christ</h1><br>
+                <h1 class="uk-display-inline-block uk-margin-remove-bottom">Learn to Read. Learn to Think. Live for Christ.</h1><br>
                 <h4 class="uk-display-inline-block uk-margin-remove-top">Herndon, VA<br>
                 <div class="uk-display-inline-block">
                     <a href="visit" class="uk-margin-small-top uk-display-inline-block uk-button uk-button-primary uk-button-large">Visit</a>
