Remove envision announcement

--- a/index.html
+++ b/index.html
@@ -74,18 +74,17 @@ extrahead:
 
 <div class="uk-section-primary">
     <div class="uk-child-width-expand@s uk-grid-collapse" uk-grid>
-        <div class="uk-cover-container uk-width-1-3@l">
-            <img src="assets/images/students-at-memorial.jpg" alt="Our Private School Campus" uk-cover>
+        <div class="uk-cover-container">
+            <img src="assets/images/ch-0.png" alt="Our Private School Campus" uk-cover>
         </div>
         <div class="">
             <div class="uk-container uk-padding-large">
-                <h1>Join us for an Envision Evening</h1>
-                <h5 class="uk-margin-remove-top">Thursday, March 23rd, 7:00-8:00 P.M.</h5>
-                <p>For families with rising or current high school students,
-                come learn about the distinctive education Oak Hill offers in
-                9th-12th grades. Meet teachers, view curriculum, and hear
-                testimonies from Oak Hill families</p>
-                <a href="mailto:headmaster@oakhillk12.com?subject=I'd%20Like%20to%20Attend%20the%20Envision%20Evening&body=Name%3A%0D%0AHow%20I%20heard%20about%20Oak%20Hill%3A%0D%0AMessage%3A" class="uk-button uk-button-large uk-button-primary">R.S.V.P.</a>
+                <h1>Schedule a Visit</h1>
+                 <p>Our building features large classrooms with beautiful views. It includes a 2,000 square foot gym and
+                     multipurpose room as well as an outdoor playground and picnic area. Our classes also have easy
+                     access to the adjacent Arrowbrook Park (Soccer, Tennis, Basketball) and to the Arrowbrook Nature
+                     Preserve.</p>
+                 <a href="/visit" class="uk-button uk-button-large uk-button-primary">Book a Tour</a>
             </div>
         </div>
     </div>
