Increase visit calendar visibility

--- a/fall2020.html
+++ b/fall2020.html
@@ -7,37 +7,73 @@ title: Give Your Child a Real Education This Fall
 <div class="uk-container uk-margin-xlarge">
   <div class="uk-grid-large uk-margin-bottom" uk-grid>
     <div class="uk-width-2-5@l uk-width-1-2@m uk-text-center">
-      <div class="uk-align-center"><img src="{{ 'assets/icons/teacher.png' | relative_url }}"></div>
+      <div class="uk-align-center">
+        <img src="{{ 'assets/icons/teacher.png' | relative_url }}" />
+      </div>
       <h2 class="uk-margin-remove-top">In Person Teaching</h2>
-      <p class="uk-margin-top uk-margin-bottom uk-text-justify">Oak Hill is committed to being open this fall 9 a.m. – 3 p.m., 5 days a week for your child. Students need to work alongside their peers. Especially in Kindergarten and Grades 1-6, they need instruction from a teacher who meets them in person. Children pay the price when schools close more often than is necessary.</p>
+      <p class="uk-margin-top uk-margin-bottom uk-text-justify">
+        Oak Hill is committed to being open this fall 9 a.m. – 3 p.m., 5 days a
+        week for your child. Students need to work alongside their peers.
+        Especially in Kindergarten and Grades 1-6, they need instruction from a
+        teacher who meets them in person. Children pay the price when schools
+        close more often than is necessary.
+      </p>
     </div>
     <div class="uk-width-3-5@l uk-width-1-2@m uk-visible@m">
       <div class="uk-cover-container uk-height-1-1">
-        <img class="three-images" src="{{ 'assets/images/sabin-teaching.jpg' | relative_url }}" uk-cover>
+        <img
+          class="three-images"
+          src="{{ 'assets/images/sabin-teaching.jpg' | relative_url }}"
+          uk-cover
+        />
       </div>
     </div>
   </div>
   <div class="uk-grid-large uk-margin-bottom uk-margin-xlarge-top" uk-grid>
     <div class="uk-width-3-5@l uk-width-1-2@m uk-visible@m">
       <div class="uk-cover-container uk-height-1-1">
-        <img class="three-images" src="{{ 'assets/images/outside.jpg' | relative_url }}" uk-cover>
+        <img
+          class="three-images"
+          src="{{ 'assets/images/outside.jpg' | relative_url }}"
+          uk-cover
+        />
       </div>
     </div>
     <div class="uk-width-2-5@l uk-width-1-2@m uk-text-center">
-      <div class="uk-align-center"><img src="{{ 'assets/icons/nature.png' | relative_url }}"></div>
+      <div class="uk-align-center">
+        <img src="{{ 'assets/icons/nature.png' | relative_url }}" />
+      </div>
       <h2 class="uk-margin-remove-top">Socialization & Outdoor Time</h2>
-      <p class="uk-margin-top uk-margin-bottom uk-text-justify">We’re modifying schedules to ensure two outdoor playtimes every day. Fresh air, running with friends, climbing on the playground, all these are healthy and important especially after months of lockdowns.</p>
+      <p class="uk-margin-top uk-margin-bottom uk-text-justify">
+        We’re modifying schedules to ensure two outdoor playtimes every day.
+        Fresh air, running with friends, climbing on the playground, all these
+        are healthy and important especially after months of lockdowns.
+      </p>
     </div>
   </div>
   <div class="uk-grid-large uk-margin-bottom uk-margin-xlarge-top" uk-grid>
     <div class="uk-width-2-5@l uk-width-1-2@m uk-text-center">
-      <div class="uk-align-center"><img src="{{ 'assets/icons/safe.png' | relative_url }}"></div>
+      <div class="uk-align-center">
+        <img src="{{ 'assets/icons/safe.png' | relative_url }}" />
+      </div>
       <h2 class="uk-margin-remove-top">Safe & Clean</h2>
-      <p class="uk-margin-top uk-margin-bottom uk-text-justify">Oak Hill is a member of the Association of Classical and Christian Schools as well as the Virginia Council for Private Education. Our reopening plan meets state guidelines. Desks are spaced generously in our large classrooms. We disinfect surfaces and clean our building throughout the day. As they always have at OH, our students wash hands and eat lunch brought from home in their own classrooms. Groups are not mixed.</p>
+      <p class="uk-margin-top uk-margin-bottom uk-text-justify">
+        Oak Hill is a member of the Association of Classical and Christian
+        Schools as well as the Virginia Council for Private Education. Our
+        reopening plan meets state guidelines. Desks are spaced generously in
+        our large classrooms. We disinfect surfaces and clean our building
+        throughout the day. As they always have at OH, our students wash hands
+        and eat lunch brought from home in their own classrooms. Groups are not
+        mixed.
+      </p>
     </div>
     <div class="uk-width-3-5@l uk-width-1-2@m uk-visible@m">
       <div class="uk-cover-container uk-height-1-1">
-        <img class="three-images" src="{{ 'assets/images/distanced-classroom.jpg' | relative_url }}" uk-cover>
+        <img
+          class="three-images"
+          src="{{ 'assets/images/distanced-classroom.jpg' | relative_url }}"
+          uk-cover
+        />
       </div>
     </div>
   </div>
@@ -45,8 +81,12 @@ title: Give Your Child a Real Education This Fall
 
 <div class="uk-section uk-section-muted uk-margin-large-top uk-text-center">
   <h1>Save Your Spot</h1>
-  <iframe id="requestApplication" class="uk-width-1-1" height="1024"
-    src="https://forms.oakhillk12.com/forms/request"></iframe>
+  <iframe
+    id="requestApplication"
+    class="uk-width-1-1"
+    height="1024"
+    src="https://forms.oakhillk12.com/forms/request"
+  ></iframe>
 </div>
 
 <div class="uk-section uk-section-primary">
@@ -55,15 +95,30 @@ title: Give Your Child a Real Education This Fall
       <div>
         <h1>Next Steps</h1>
         <ul class="uk-list">
-          <li>If you filled out the form above, we will send you an email with a link to an online application and fee schedule.</li>
-          <li><a style="text-decoration: underline;" href="/visit">Book a tour</a> to come see the school in person.</li>
-          <li><a style="text-decoration: underline;" href="/#contact">Contact us</a> if you need anything else.</li>
+          <li>
+            If you filled out the form above, we will send you an email with a
+            link to an online application and fee schedule.
+          </li>
+          <li>
+            <a style="text-decoration: underline" href="/visit">Book a tour</a>
+            to come see the school in person.
+          </li>
+          <li>
+            <a style="text-decoration: underline" href="/#contact"
+              >Contact us</a
+            >
+            if you need anything else.
+          </li>
         </ul>
       </div>
       <div>
         <h1>Still have questions?</h1>
-        <a href="/visit" class="uk-button uk-button-large uk-button-primary">Visit the School</a>
-        <a href="/#contact" class="uk-button uk-button-large uk-button-primary">Contact Us</a>
+        <a href="/visit" class="uk-button uk-button-large uk-button-primary"
+          >Visit the School</a
+        >
+        <a href="/#contact" class="uk-button uk-button-large uk-button-primary"
+          >Contact Us</a
+        >
       </div>
     </div>
   </div>
@@ -77,16 +132,19 @@ title: Give Your Child a Real Education This Fall
 </style>
 <script src="{{ 'js/iframeResizer.min.js' | relative_url }}"></script>
 <script>
-  iFrameResize({log: true}, '#requestApplication')
-  window.addEventListener('message', function (event) {
+  iFrameResize({ log: true }, "#requestApplication");
+  window.addEventListener("message", function (event) {
     // ignore messages from the wrong domain
-    if (event.origin != 'https://forms.oakhillk12.com' || event.data.type != 'form submitted') {
+    if (
+      event.origin != "https://forms.oakhillk12.com" ||
+      event.data.type != "form submitted"
+    ) {
       return;
     }
 
     dataLayer.push({
-      'event': 'request application',
-      'email': event.data.email,
+      event: "request application",
+      email: event.data.email,
     });
   });
 </script>
