--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@ extrahead:
                 <h1 class="uk-display-inline-block uk-margin-remove-bottom">Learn to Read. Learn to Think. Live for Christ.</h1><br>
                 <h4 class="uk-display-inline-block uk-margin-remove-top">Herndon, VA<br>
                 <div class="uk-display-inline-block">
-                    <a href="visit" class="uk-margin-small-top uk-display-inline-block uk-button uk-button-primary uk-button-large">Visit</a>
+                    <!-- Calendly link widget begin -->
+                    <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+                    <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+                    <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/ohcs/visit?hide_landing_page_details=1&hide_gdpr_banner=1&text_color=303030&primary_color=CEA866'});return false;" class="uk-margin-small-top uk-display-inline-block uk-button uk-button-primary uk-button-large">Visit</a>
+                    <!-- Calendly link widget end -->
                     <div class="uk-light uk-display-inline-block">
                     <a href="apply"
                         class="uk-margin-small-top uk-display-inline-block uk-button uk-button-large uk-button-primary">Apply</a>
@@ -84,7 +88,7 @@ extrahead:
                      multipurpose room as well as an outdoor playground and picnic area. Our classes also have easy
                      access to the adjacent Arrowbrook Park (Soccer, Tennis, Basketball) and to the Arrowbrook Nature
                      Preserve.</p>
-                 <a href="/visit" class="uk-button uk-button-large uk-button-primary">Book a Tour</a>
+                 <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/ohcs/visit?hide_landing_page_details=1&hide_gdpr_banner=1&text_color=303030&primary_color=CEA866'});return false;" class="uk-button uk-button-large uk-button-primary">Book a Tour</a>
             </div>
         </div>
     </div>
