--- a/index.html
+++ b/index.html
@@ -79,16 +79,15 @@ extrahead:
 <div class="uk-section-primary">
     <div class="uk-child-width-expand@s uk-grid-collapse" uk-grid>
         <div class="uk-cover-container">
-            <img src="assets/images/ch-0.png" alt="Our Private School Campus" uk-cover>
+            <img src="assets/images/campus/5.JPG" alt="Our Private School Campus" uk-cover>
         </div>
         <div class="">
             <div class="uk-container uk-padding-large">
-                <h1>Schedule a Visit</h1>
-                 <p>Our building features large classrooms with beautiful views. It includes a 2,000 square foot gym and
-                     multipurpose room as well as an outdoor playground and picnic area. Our classes also have easy
-                     access to the adjacent Arrowbrook Park (Soccer, Tennis, Basketball) and to the Arrowbrook Nature
-                     Preserve.</p>
-                 <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/ohcs/visit?hide_landing_page_details=1&hide_gdpr_banner=1&text_color=303030&primary_color=CEA866'});return false;" class="uk-button uk-button-large uk-button-primary">Book a Tour</a>
+                <h1>BBQ: July 10</h1>
+                 <p>Prospective families are invited to a BBQ on July 10th from
+                 4-7 P.M. Meet staff and other families. Enjoy fun games and
+                 tasty food..</p>
+                 <a target="_blank" href="https://goo.gl/maps/wXRc3AtamFqUCJoM7" class="uk-button uk-button-large uk-button-primary">Directions</a>
             </div>
         </div>
     </div>
