--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ extrahead:
                 <h1>BBQ: July 10</h1>
                  <p>Prospective families are invited to a BBQ on July 10th from
                  4-7 P.M. Meet staff and other families. Enjoy fun games and
-                 tasty food..</p>
+                 tasty food.</p>
                  <a target="_blank" href="https://goo.gl/maps/wXRc3AtamFqUCJoM7" class="uk-button uk-button-large uk-button-primary">Directions</a>
             </div>
         </div>
